--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -51,7 +51,7 @@
       ],
       "metadata": {
         "id": "noffZ0wtGZku",
-        "outputId": "b5400767-fb2c-4cc0-d393-a5af140d9ef8",
+        "outputId": "0c55f4a0-1507-4d7b-aaa0-b641ba6a0e52",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -64,12 +64,12 @@
           "text": [
             "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
             "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 165, done.\u001b[K\n",
-            "remote: Counting objects: 100% (162/162), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (81/81), done.\u001b[K\n",
-            "remote: Total 165 (delta 91), reused 139 (delta 79), pack-reused 3\u001b[K\n",
-            "Receiving objects: 100% (165/165), 3.12 MiB | 8.72 MiB/s, done.\n",
-            "Resolving deltas: 100% (91/91), done.\n"
+            "remote: Enumerating objects: 168, done.\u001b[K\n",
+            "remote: Counting objects: 100% (165/165), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (84/84), done.\u001b[K\n",
+            "remote: Total 168 (delta 94), reused 139 (delta 79), pack-reused 3\u001b[K\n",
+            "Receiving objects: 100% (168/168), 3.12 MiB | 18.25 MiB/s, done.\n",
+            "Resolving deltas: 100% (94/94), done.\n"
           ]
         }
       ]
@@ -85,12 +85,12 @@
       ],
       "metadata": {
         "id": "rAx5tYe5GnY9",
-        "outputId": "af5a734d-f98c-4144-ceb7-879f204cffa7",
+        "outputId": "539d10bf-cdc0-4086-ebcb-e42443bf2ff2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -134,17 +134,20 @@
         "len(population[:,0])\n",
         "distinct_xs = np.unique(population[:, 0])\n",
         "len(distinct_xs)\n",
-        "x_samples = distinct_xs[np.linspace(0, len(distinct_xs)-1, 10).astype(int)]\n",
-        "x_samples"
+        "x_samp_index = np.linspace(0, len(distinct_xs)-1, 10).astype(int)\n",
+        "x_samples = distinct_xs[x_samp_index]\n",
+        "x_samples\n",
+        "n_repeat = len(population[:,0]) // len(distinct_xs)\n",
+        "n_repeat"
       ],
       "metadata": {
         "id": "zCDURIavHXqp",
-        "outputId": "4bf2a7c4-8939-4839-af09-dcb03965ca98",
+        "outputId": "f23711c6-a4e8-4a3e-e01f-aef9afd0b4ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,19 +160,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([ 1.        ,  1.93103448,  2.86206897,  3.79310345,  4.72413793,\n",
-              "        5.96551724,  6.89655172,  7.82758621,  8.75862069, 10.        ])"
+              "10000"
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 10
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "We sampled 10 distinct x and stored them in `x_samples`. For each x there are several responses in the data set that are spaced closely around their average. Thus we can have several sampling with given `x_samples`. Let's pick one such and plot it:\n",
+        "We sampled 10 distinct x and stored them in `x_samples`. There are several observations for each x in sample and thus several responses in the population. Thus we can have several sampling with given `x_samples`. Let's pick one such and plot it:\n",
         "Next thing is you wanna randomly pick y's that are response to these x's. Not easiest to implement now. think of abstraction HERE!!!"
       ],
       "metadata": {
@@ -185,12 +187,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "rand_gen = np.random.default_rng(2)\n",
+        "def sample_response(x_sams, population, rand_gen):\n",
+        "  for x in x_sams:\n",
+        "    # generate integer between 0 to n_repeat\n",
+        "    index = rand_gen.integers(0, n_repeat)\n",
+        "    yield (population[x * n_repeat + index, 0], population[x * n_repeat + index, 1],)\n",
+        "\n",
+        "\n",
+        "print(list(sample_response(x_samp_index, population, rand_gen)))\n",
+        "print(x_samples)\n",
+        "# YAY HERE!! plot the sample distro and mark it's mean with red"
+      ],
       "metadata": {
-        "id": "eMzW6EcQIVNh"
+        "id": "eMzW6EcQIVNh",
+        "outputId": "858e5acb-1c17-4827-dcf9-bc219af98a1e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[(1.0, 4.932189294678029), (1.9310344827586208, 7.716893210378157), (2.8620689655172415, 10.628354600610912), (3.793103448275862, 12.406025998951204), (4.724137931034483, 12.387762801704252), (5.9655172413793105, 14.347471279766285), (6.8965517241379315, 18.976850098018463), (7.827586206896552, 18.31943450530723), (8.758620689655173, 20.14873201884266), (10.0, 24.278163704720317)]\n",
+            "[ 1.          1.93103448  2.86206897  3.79310345  4.72413793  5.96551724\n",
+            "  6.89655172  7.82758621  8.75862069 10.        ]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
