next to do for mean and for ds

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -273,15 +273,16 @@
         "  means.append(np.mean(y_for_x_samples[:,1]))\n",
         "\n",
         "fig, ax = plt.subplots(ncols=3)\n",
-        "ax[0].hist(means, bins=40)\n"
+        "ax[0].hist(means, bins=40)\n",
+        "# HERE!!! convert means to nparray find summary description for it whith libs, also save more info with the poulation data set, maybe pulpulation size, num distinct\n"
       ],
       "metadata": {
-        "id": "8phLoqz4ed2z",
-        "outputId": "c06daa16-94cd-42f8-e75e-65236e4afed4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 678
-        }
+        },
+        "id": "8phLoqz4ed2z",
+        "outputId": "c06daa16-94cd-42f8-e75e-65236e4afed4"
       },
       "execution_count": 17,
       "outputs": [
