--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -56,7 +56,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "eMzW6EcQIVNh"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -227,7 +227,7 @@
           "height": 452
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +279,7 @@
         "id": "8phLoqz4ed2z",
         "outputId": "85215205-3b25-4196-b111-33602885f588"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -320,7 +320,7 @@
           "height": 300
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
           "height": 469
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -703,7 +703,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,7 +717,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Notice that the regression parameters for the whole population is equal to the mean of regression parameters for all samples.\n",
+        "Notice that the regression parameters for the whole population is equal to the mean of regression parameters for all samples. You can interpret it like this:\n",
+        "\n",
+        "> Although value of $\\beta_0$ calculated for a given sample is not very accurate. But if you sample serveral times, the mean of calculated values for $\\beta_0$ is going to be equal to true value for $\\beta_0$.\n",
+        "\n",
+        "Now what we described above is very close to definition of Standard Error.\n",
+        "\n",
         "Now let's look at the variance of those regression parameters over all samples. First of all here's the definition of variance. HERE!!!"
       ],
       "metadata": {
