--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -717,11 +717,14 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
         "Notice that the regression parameters for the whole population is equal to the mean of regression parameters for all samples. You can interpret it like this:\n",
         "\n",
         "> Although value of $\\beta_0$ calculated for a given sample is not very accurate. But if you sample serveral times, the mean of calculated values for $\\beta_0$ is going to be equal to true value for $\\beta_0$.\n",
         "\n",
         "Now what we described above is very close to definition of Standard Error.\n",
+        "Standard error of a measure is the standard deviation of it's sampling distribution.\n",
+        "\n",
         "\n",
         "Now let's look at the variance of those regression parameters over all samples. First of all here's the definition of variance. HERE!!!"
       ],
