SE beta computation

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -718,14 +718,19 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "Notice that the regression parameters for the whole population is equal to the mean of regression parameters for all samples. You can interpret it like this:\n",
+        "Notice that the regression parameters for the whole population is equal to the mean value of  estimates of regression parameters estimates for 10000 sampling we performed using `sample_response`. You can interpret it like this:\n",
         "\n",
         "> Although value of $\\beta_0$ calculated for a given sample is not very accurate. But if you sample serveral times, the mean of calculated values for $\\beta_0$ is going to be equal to true value for $\\beta_0$.\n",
         "\n",
         "Now what we described above is very close to definition of Standard Error.\n",
         "Standard error of a measure is the standard deviation of it's sampling distribution.\n",
         "\n",
+        "We can compute $SE(\\beta_0)$ using the data `beta0s` and some python library and compare it with the value obtained from formula\n",
+        "$$\n",
+        "SE(\\beta_0)^2 = \\sigma^2( 1/n - \\frac{\\bar{x}^2}{\\sum(x_i - \\bar{x})^2})\n",
+        "$$\n",
         "\n",
+        "HERE!!!\n",
         "Now let's look at the variance of those regression parameters over all samples. First of all here's the definition of variance. HERE!!!"
       ],
       "metadata": {
