--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -764,13 +764,104 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "HERE!!! when note book is done, create a new one to play with an np array that has shape (10, 5, 6). visualize it as 3d rubick cube. then use ix_ to slice it. talk about tensors are matrixes with more than 2 faces. also mention slicing is sorta projection. also try all three meshes listed down here. and visualize the the selection in animated way"
+      ],
       "metadata": {
-        "id": "y1GpZkuAJvYU"
+        "id": "UNwxsTYz-f7y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "y1GpZkuAJvYU",
+        "outputId": "b7edf89c-e058-43c3-a915-5cb4aff049dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(10, 3, 1)\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]],\n",
+              "\n",
+              "       [[1.],\n",
+              "        [1.],\n",
+              "        [1.]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
+      "source": [
+        "\n",
+        "import numpy as np\n",
+        "faces = np.ones(shape=(10, 3, 4))\n",
+        "\n",
+        "# mesh = np.ix_([0])\n",
+        "# mesh = np.ix_(range(10), [0], range(4))\n",
+        "mesh = np.ix_(range(10), range(3), [0])\n",
+        "\n",
+        "sample = faces[mesh]\n",
+        "\n",
+        "print(sample.shape)\n",
+        "sample"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qKM-q77ouWe4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
