Connection between method of least squares and distribution of errors

--- a/LinearRegressionMatrix.ipynb
+++ b/LinearRegressionMatrix.ipynb
@@ -21,6 +21,7 @@
         "  - Matrix notation of linear regression.\n",
         "  - Different algebraic ways one can view the problem.\n",
         "  - The line fitting.\n",
+        "  - Connection between method of least squares and the distribution of error terms.\n",
         "- Conclusion:"
       ],
       "metadata": {
@@ -378,34 +379,60 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Without the epsilon term, solving it looks like solving linear equations and there is standard prodecures for it. But now what do we do with epsilon term.\n",
+        "## Connection between method of least squares and the Error terms\n",
+        "\n",
+        "Without the epsilon term, finding the regression parameters (or $\\beta_i$'s) looks like solving multiple linear equations and there is standard prodecures for it. But now what do we do with epsilon term.\n",
         "\n",
         "Let's take a look into the history of it.\n",
         "\n",
         "The method of least squares grew out of the fields of astronomy, as scientists tried to provide solutions to the challenges of navigating the Earth's oceans.\n",
         "\n",
-        "Their astronomical observations where in form of lots of equations with lots of variables. But observations always have error in them.\n",
-        "One historical point that helped advance this method was that, they figured if you try to solve equations in aggregation, errors decreases rather than increase, perhaps first expressed by Roger Cotes in 1722.\n",
+        "Their astronomical observations were in form of lots of equations with lots of variables. But observations always have error in them. So there was cases that these equation do not have any solution. However, they really wanted a solution.\n",
         "\n",
-        "But since the system is not exact, there was cases that these equation do not have any solution. However, they really wanted a solution.\n",
+        "Their trick was to add an error term, and expect that equations to always have some solution. Typically, multiple solutions exist, each with different error term values. The best solution is the one that minimizes the overall error.\n",
         "\n",
-        "So their trick was to add an error term, and expect that equations to always have solution. So any given solution finds the value of error term as well as values for unknown variables.\n",
-        "\n",
-        " But best solution is the one that minimizes  the overal error. But how to define the criterion for overal error term? that was the sume of square of errors. And they called it method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
+        "How to define the criterion for overal error term? Which function of error do we want to minimize? One possible such funtion is the sum of squares of errors. The modthod that finds the linear regression coefficients by minimizing the sum of square of errors is called method of least squares. Nowdays, method of least squares is part of Regression, particularly it is one possible loss function.\n",
         "\n",
         "\n",
-        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805. But before him there was some work on  developing a criterion  to determine which  solution has the minimum error. Namely,  Laplace tried to specify a mathematical form of the probability density for the errors and define a method of estimation that minimizes the error of estimation.\n",
+        "The first clear and concise exposition of the method of least squares was published by [Legendre](https://en.wikipedia.org/wiki/Adrien-Marie_Legendre) in 1805.\n",
         "\n",
-        "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies. In that work he claimed to have been in possession of the method of least squares since 1795. This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. In practice it means to assume $\\epsilon_i$'s has a normal disribution. The assumptin helps a lot when trying to minimize the sum of squared errors.\n",
+        "However, In 1809 Carl Friedrich Gauss published his method of calculating the orbits of celestial bodies.This naturally led to a priority dispute with Legendre. However, to Gauss's credit, he went beyond Legendre and succeeded in connecting the method of least squares with the principles of probability and to the normal distribution. We'll see how the method gets linked to the probability distribution of errors.\n",
         "\n",
-        "## Conclusion\n",
+        "But why method of least square is a good choice for finding the coefficients? the answer to this question depends on two things: firstly on the assumptions about error distribution, and secondly, on what are we looking for in a solution.  \n",
         "\n",
-        "One might ask why would we use method of least square as a loss function for linear regression.\n",
+        "By picking a criterion for solving the equations, in practice, we find a estimate $\\hat{\\beta_j}$ for $\\beta_j$ in below equations. This estimate is a function of $X$ and $y$.\n",
+        "\n",
+        "$$\n",
+        "\\begin{align}\n",
+        "y_1 &= \\beta_1 x_{11} + \\cdots + \\beta_p x_{1p} + \\beta_0 + \\epsilon_1\\\\\n",
+        "y_2 &= \\beta_1 x_{21} + \\cdots + \\beta_p x_{2p} + \\beta_0 + \\epsilon_2\\\\\n",
+        "&\\vdots \\\\\n",
+        "y_n &= \\beta_1 x_{n1} + \\cdots + \\beta_p x_{np}  + \\beta_0 + \\epsilon_n\n",
+        "\\end{align}\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "\n",
+        "If we decide to minimize the sum of least square of errors, the estimator $\\hat{\\beta}$ will be called **ordinary least squares estimator (OLS)** and is below function\n",
+        "$$\n",
+        "\\beta_j =  (X^TX)^{-1}X^Ty\n",
+        "$$\n",
+        "\n",
+        "⏰  Now, wait for it ..., it turns out that OLS is the **best unbiased linear estimator** or [BLUE](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem) under a few assumptions about the set of error random variables, $\\epsilon_i$:\n",
+        "- They have mean zero: $E[\\epsilon_i]= 0$\n",
+        "- They are homoscedastic, that is all have the same finite variance: $Var(\\epsilon_i) = \\sigma^2$ for all i and\n",
+        "- Distinct error terms uncorrelated: $Cov(\\epsilon_i, \\epsilon_j) = 0, \\forall i \\neq j.$\n",
+        "\n",
+        "⭐ We can answer the question we asked a while ago: why method of least square is a good choice for finding the coefficients, specificaly when the error terms has a normal distribution?  Because under the assumption of normal distibution and uncorrelated error terms, the OLS estimator (that is result of using method of least squares) is going to be Best unbiased linear estimator or BLUE.\n",
+        "\n",
+        "🔹 The term BLUE suggests that there are other good estimators. OLS is the best one among the linear and unbiased ones. The fact that OLS estimator is linear in term of y's is easy to verify.\n",
+        "\n",
+        "However, we haven't explained what unbiased means.\n",
         "\n",
         "Here is an observation that helps answer above question:\n",
         "\n",
         "WHen there is no predictors and error follows normal distribution, mean of responses is what optimizes the sum of squared errors.\n",
-        "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\hat{\\beta_0 }$. Then we need to minimize $\\sum{(y_i - \\hat{\\beta_0})^2}$.\n",
+        "In that case $y = [y_1, ..., y_n]^T$ and we would like to find best $\\beta_0$ to fit $y = \\hat{\\beta_0 }$. Then OLS would minimize $\\sum{(y_i - \\hat{\\beta_0})^2}$.\n",
         "\n",
         "If we use the $\\hat{\\beta_0}$ calculated for the sample to estimate the $\\beta_0$ for the whole population or better to say the real y for population, this estimation is *unbiased*. It means on average we expect $\\hat{\\beta_0}$ to equal to ${\\beta_0}$. Hence an unbiased estimator does not systemically over- or under-estimate the true value.\n",
         "\n",
@@ -414,7 +441,14 @@
         "\n",
         "  In fact under the assumption of normally distributed errors, the least squares estimates have desirable properties such as being unbiased and having minimum variance among all linear estimators. That is one of the reasons that  method of least squares and normal distribution are tied together.\n",
         "  \n",
-        "  Another reason is that even if the underlying data are not normally distributed, the central limit theorem implies that the distribution of the sum of many independent, identically distributed random variables tends toward a normal distribution as the number of variables increases.\n",
+        "  \n",
+        "\n",
+        "\n",
+        "\n",
+        "## Conclusion\n",
+        "We looked at linear regression problem in the form of solving multiple linear equations. Then we looked at two ways of interpreting a solution with matrixes (or linear spaces). Finally we contemplated on the error terms, method of least squares, and how the mothod is connected to the distribution of error terms.\n",
+        "\n",
+        "\n",
         "  \n",
         "  \n",
         "This concludes this not book. Next notebook we try to look at the model coefficients ($\\beta_i$'s ) as summary statistics defined on samples. You can also think of them as measures since samples are subsets.  \n",
