--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -16,7 +16,7 @@
         "Outline\n",
         "- Introduction (Purpose + scope)\n",
         "- Body\n",
-        "  - sample summary statistics and examples (coefficients of fitted model)\n",
+        "  - Sample Statistic and examples (coefficients of fitted model)\n",
         "  - load data and showcase\n",
         "  - Sample responses for same set of predictors.\n",
         "  - Sampling distribution of summary statistics. (use sample mean as example)\n",
@@ -57,7 +57,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -108,7 +108,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Summary Statistic\n",
+        "### Sample Statistic\n",
         "\n",
         "Previously we explained the concept of population and the concept of sample. Basically we have one population (e.g., population of American people) but we can sample a subset in many ways (e.g., sample of America people under age 18, sample of American people living in new your, etc).\n",
         "\n",
@@ -153,7 +153,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +248,7 @@
           "height": 452
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +300,7 @@
         "id": "8phLoqz4ed2z",
         "outputId": "954237c5-f7fe-4583-dbdf-691ea77a6ac8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -341,7 +341,7 @@
           "height": 300
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -675,7 +675,7 @@
           "height": 469
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -765,7 +765,7 @@
       "metadata": {
         "id": "T16AHXBgK9dJ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -785,7 +785,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
