--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -122,14 +122,23 @@
         "\n",
         "What you want to do is to take a sample of the whole poulations that is a good representetive of the whole sample. Let's say you invite people randomly to answer your question and everybody got same chance of being asked. Then one can find the average age for the people in the sample. This won't be exactly equal to the population mean. However you can argue this is a good estimate of the average age of the whole population. But the question is how good is this estimate? how close it is gonna be to the correct answer and how likely?\n",
         "\n",
-        "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
-        "\n",
-        "But before that lets do some randome samplings of samples of size 100 that share the same predictors (`x_samples`)\n",
         "\n",
         "\n"
       ],
       "metadata": {
         "id": "PxAQonrAJ4Rv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Sampling distribution\n",
+        "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
+        "\n",
+        "But before that lets do some randome samplings of samples of size 100 that share the same predictors (`x_samples`)\n"
+      ],
+      "metadata": {
+        "id": "bk7tGdeg2uis"
       }
     },
     {
