--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -12,15 +12,24 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hFS4V5a_Og4S"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "Outline\n",
         "- Introduction (Purpose + scope)\n",
+        "  - Load generated data from previous notebook\n",
         "- Body\n",
         "  - Sample Statistic and examples (coefficients of fitted model)\n",
-        "  - load data and showcase\n",
-        "  - Sample responses for same set of predictors.\n",
-        "  - Sampling distribution of summary statistics. (use sample mean as example)\n",
-        "  - Expected value of summary statistics\n",
+        "  - Sampling\n",
+        "     - Sampling distribution of statistics. (use sample mean as example)\n",
+        "     - How to perform sampling given values for a set of predictors\n",
+        "     - Graph sampling disribution of mu and beta0 for generated data\n",
+        "  - Expected value of summary statistics (HERE!!!)\n",
         "  - Variance of summary statistic\n",
         "  - Variance within a sample vs variance of a given stat over samplings\n",
         "  - Standrad Error of stats and confidence interval. (SE(beta0))\n",
@@ -51,29 +60,10 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "noffZ0wtGZku",
-        "outputId": "7cedc6fe-2477-4b31-ba08-c39ec03ef7bc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "noffZ0wtGZku"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
-            "Cloning into 'AminehTechnicalWritings'...\n",
-            "remote: Enumerating objects: 207, done.\u001b[K\n",
-            "remote: Counting objects: 100% (204/204), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (123/123), done.\u001b[K\n",
-            "remote: Total 207 (delta 117), reused 140 (delta 79), pack-reused 3\u001b[K\n",
-            "Receiving objects: 100% (207/207), 3.28 MiB | 8.96 MiB/s, done.\n",
-            "Resolving deltas: 100% (117/117), done.\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -86,12 +76,12 @@
       ],
       "metadata": {
         "id": "rAx5tYe5GnY9",
-        "outputId": "5f1a890a-4ef9-4979-c288-1b7f1984b738",
+        "outputId": "0b005ce7-e1b6-43a5-a396-ed27275fdd39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,7 +91,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ]
     },
@@ -118,7 +108,7 @@
         "\n",
         "So far it was fairly easy to explain things. But it gets a bit trickier when we wanna talk about the distribution of such measures over allll samples and compare them with the value of measure on the poulation.\n",
         "\n",
-        "The motivation behind sampling is that population is too big and it is virtually impossible to calculate the mean for the whole population. Let's say as a minister of something you need the average age of your population.  It sounds quite impossible to get everybody's ages and calculate their mean.\n",
+        "The motivation behind sampling and calculating sample statistics is that population is too big and it is virtually impossible to calculate statistics such as mean for the whole population. Let's say as a minister of something you need the average age of your population.  It sounds quite impossible to get everybody's ages and calculate their mean.\n",
         "\n",
         "What you want to do is to take a sample of the whole poulations that is a good representetive of the whole sample. Let's say you invite people randomly to answer your question and everybody got same chance of being asked. Then one can find the average age for the people in the sample. This won't be exactly equal to the population mean. However you can argue this is a good estimate of the average age of the whole population. But the question is how good is this estimate? how close it is gonna be to the correct answer and how likely?\n",
         "\n",
@@ -132,7 +122,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sampling distribution\n",
+        "### Sampling distribution of a statistics\n",
+        "\n",
+        "ADD definition of sampling distribution + explain what is the process of sampling involved to graph a sampling distribution of a measure such as mu (HERE!!!)\n",
+        "\n",
         "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
         "\n",
         "But before that lets do some randome samplings of samples of size 100 that share the same predictors (`x_samples`)\n"
