change layout again

--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -24,16 +24,19 @@
         "- Introduction (Purpose + scope)\n",
         "  - Load generated data from previous notebook\n",
         "- Body\n",
-        "  - Sample Statistic and examples (coefficients of fitted model)\n",
         "  - Sampling\n",
-        "     - Sampling distribution of statistics. (use sample mean as example)\n",
-        "     - How to perform sampling given values for a set of predictors\n",
-        "     - Graph sampling disribution of mu and beta0 for generated data\n",
-        "  - Expected value of summary statistics (HERE!!!)\n",
-        "  - Variance of summary statistic\n",
-        "  - Variance within a sample vs variance of a given stat over samplings\n",
-        "  - Standrad Error of stats and confidence interval. (SE(beta0))\n",
-        "  - F-test (within groups variance vs between group variance)\n",
+        "    - Population data set vs Sample data sets\n",
+        "    - How to perform sampling given values for a set of predictors\n",
+        "  - Sample statistic\n",
+        "    - Sample Statistic and examples\n",
+        "    - Sampling distribution of statistics. (use sample mean as example)\n",
+        "    - Graph sampling disribution of mu and beta0 for generated data\n",
+        "  - Expected value, variance and standard error of sample statistic\n",
+        "    - Expected value of summary statistics (HERE!!!)\n",
+        "    - Variance of summary statistic\n",
+        "    - Variance within a sample vs variance of a given stat over samplings\n",
+        "    - Standrad Error of stats and confidence interval. (SE(beta0))\n",
+        "  F-test (within groups variance vs between group variance)\n",
         "- Conclusion:"
       ],
       "metadata": {
@@ -43,7 +46,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Git setup and data load"
+        "## Git setup and data load\n",
+        "We use our git repo, and the data we generated and saved there.\n",
+        "Through this notebook we load the data at some point and use it to demonstrate concepts. 📪 HERE!!!"
       ],
       "metadata": {
         "id": "32JOiZD_Ga8p"
@@ -98,7 +103,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sample Statistic\n",
+        "### Population data set vs Sample data sets\n",
         "\n",
         "Previously we explained the concept of population and the concept of sample. Basically we have one population (e.g., population of American people) but we can sample a subset in many ways (e.g., sample of America people under age 18, sample of American people living in new your, etc).\n",
         "\n",
@@ -122,9 +127,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sampling distribution of a statistics\n",
+        "### How to perform sampling given values for a set of predictors\n",
         "\n",
-        "ADD definition of sampling distribution + explain what is the process of sampling involved to graph a sampling distribution of a measure such as mu (HERE!!!)\n",
         "\n",
         "Let's look at the population mean and sample mean for the data set we have created in previous notebooks.\n",
         "\n",
@@ -319,6 +323,10 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Sample statistic and their sampling disribution\n",
+        "\n",
+        "ADD definition of sampling distribution + explain what is the process of sampling involved to graph a sampling distribution of a measure such as mu (HERE!!!)\n",
+        "\n",
         "We have got a array of sample means.\n",
         "Let's inspect into that array."
       ],
