--- a/SamplingStatsAndDistros.ipynb
+++ b/SamplingStatsAndDistros.ipynb
@@ -47,7 +47,7 @@
       "cell_type": "markdown",
       "source": [
         "## Git setup and data load\n",
-        "We use our git repo, and the data we generated and saved there.\n",
+        "We setup the git repo, and then load data we previously generated and saved there.\n",
         "Through this notebook we load the data at some point and use it to demonstrate concepts. 📪 HERE!!!"
       ],
       "metadata": {
